Project Proposal added and UI update

--- a/templates/alloa_matching/academic_closed.html
+++ b/templates/alloa_matching/academic_closed.html
@@ -41,7 +41,7 @@
         display:inline;
     }
     .stage{
-        background-color: #fcba03;
+        background-color: #f0d805;
         color: white;
         padding: 5px;
         border-radius:5px;
