--- a/templates/alloa_matching/base.html
+++ b/templates/alloa_matching/base.html
@@ -26,6 +26,7 @@
     <style>
         body{
             margin:0;
+            overflow-x:hidden;
         }
         .navbar{
             height:60px;
