--- a/templates/alloa_matching/index.html
+++ b/templates/alloa_matching/index.html
@@ -52,6 +52,6 @@ input[type=submit] {
     cursor: pointer;
     width: 100%;
     font-family:arial;
-    text-size:16px;
+    font-size:16px;
 }
 {% endblock %}
