--- a/templates/alloa_matching/academic_proposal.html
+++ b/templates/alloa_matching/academic_proposal.html
@@ -42,7 +42,7 @@
             </table>
         {% endfor %}
     </div>
-    <div id = "form" style = "width:48%;float:right;left:50.5%;">
+    <div id = "form" style = "width:48%;float:right;left:50.5%;position:absolute;">
         <h3>Propose a New Project</h3>
         <form action="{% url 'instance' instance.id %}" method="post" enctype="multipart/form-data">
             {% csrf_token %}
