--- a/templates/alloa_matching/student_preference.html
+++ b/templates/alloa_matching/student_preference.html
@@ -1,6 +1,223 @@
 {% extends 'alloa_matching/base.html' %}
 {% load staticfiles %}
 
+{% block head_block %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <script src="https://kit.fontawesome.com/2e8b22a65b.js" crossorigin="anonymous"></script>
+{% endblock %}
+
 {% block body_block %}
-        <p>Student Preference</p>
+        {% if messages %}
+                <ul class="messages">
+                {% for message in messages %}
+                        <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+                </ul>
+        {% endif %}
+        <div style = "margin-top:20px;"><h1>{{ instance.name }} - </h1><h3 class = "stage">Student Rankings</h3></div>
+        <div id = "list" style = "width:49.5%; float:left;">
+                {% if results|length > 1 %}
+                <h3>Projects</h3>
+                {% else %}
+                <h3>Project</h3>
+                {% endif %}
+                {% for result in results %}
+                        <table class = "result">
+                        <tr>
+                                <th>
+                                <p class = "header">{{result.name}}</p> 
+                                <a href="javascript:showOrHide({{forloop.counter}})">
+                                        <i id="arrow{{forloop.counter}}"class={% if results|length > 3 %}'fas fa-angle-right'{% else %}'fas fa-angle-down'{% endif %}></i>
+                                </a>
+                                <a href="javascript:setValue('{{result.name}}')">
+                                        <i style = "margin-left:10px;" class="fas fa-plus-circle"></i>
+                                </a>
+                                </th>
+                        </tr>
+                        <tr style="{% if results|length > 3 %} display:none; {% else %} display:block; {% endif %}" id="showorhide{{forloop.counter}}">
+                                <td>{{result.description}}</td>
+                        </tr>
+                        </table>
+                {% endfor %}
+        </div>
+        <div id = "form" style = "width:48%;float:right;left:50.5%; position:absolute;">
+                <h3>Your Rankings</h3>
+                <h4>Minimum List Length: {{instance.min_pref_len}} - Maximum List Length: {{instance.max_pref_len}}</h4>
+                <form action="{% url 'instance' instance.id %}" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {{ formset.management_form }}
+                        {% for form in formset %}
+                        <div>
+                                <label for="id_name_{{forloop.counter}}">Project Rank {{forloop.counter}}:</label>
+                                <input type="text" name="project_name_{{forloop.counter0}}" maxlength="200" required="" id="id_name_{{forloop.counter}}" value="{{form.project.value}}" readonly>
+                                <a href="javascript:removeValue({{forloop.counter}})"><i style="color:grey; margin-top:1.4%;" class="fas fa-trash-alt"></i></a>
+                                {% if forloop.counter == 1%}
+                                        <a href="javascript:moveDown({{forloop.counter}})"><i style="color:grey;position:relative;right:3%;top:15px;margin:0;" class="fas fa-caret-down"></i></a>
+                                {% elif forloop.counter < instance.max_pref_len %}
+                                        <a href="javascript:moveDown({{forloop.counter}})"><i style="color:grey;position:relative;right:3%;top:20px;margin:0;" class="fas fa-caret-down"></i></a>
+                                {% endif %}
+                                {% if forloop.counter == instance.max_pref_len %}
+                                        <a href="javascript:moveUp({{forloop.counter}})"><i style="color:grey; position:relative;right:3%;top:15px;margin:0;" class="fas fa-caret-up"></i></a>
+                                {% elif forloop.counter > 1 %}
+                                        <a href="javascript:moveUp({{forloop.counter}})"><i style="color:grey; position:relative;right:1.4%;top:5px;margin:0;" class="fas fa-caret-up"></i></a>
+                                {% endif %}
+                        {% endfor %}
+                        </div>
+                        <input type="submit" name = "preferences" value="Submit">
+                </form>
+        </div>
+{% endblock %}
+
+{% block style_block %}
+    h1,h2,h3,label,table,h4{
+        font-family: arial;
+    }
+    h1,.stage{
+        display:inline;
+    }
+    .stage{
+        background-color: #c42525;
+        color: white;
+        padding: 5px;
+        border-radius:5px;
+        vertical-align:4px;
+    }
+    .header{
+        display:inline;
+        vertical-align:-3px;
+    }
+    .result{
+        width:100%;
+        border-collapse:collapse;
+        border-radius:5px;
+        border: 1px solid grey;
+        margin: 0 0 10px 0;
+    }
+    .result th{
+        text-align:left;
+        background-color:grey;
+        color:white;
+        font-size:24px;
+    }
+    .result th,td{
+        padding: 10px;
+        font-family:arial;
+        font-size: 16px;
+    }
+    .extra{
+        display:block; 
+    }
+    i{
+        font-size:24px;
+        margin-right:10px;
+        float:right;
+        color:white;
+    }
+    #bin{
+            width:3%;
+    }
+    .fix-form{
+        position:fixed;
+        left:50.5%;
+        top:0;
+    }
+    input[type=submit] {
+        background-color: #228fe6;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        font-family:arial;
+        font-size:16px;
+    }
+    input[type=text],.rank {
+        width: 90%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+    }
+    
+{% endblock%}
+
+{% block script_block %}
+<script type="text/javascript">
+        var next = {{initial_length}}+1;
+        var max = {{instance.max_pref_len}};
+    $(document).ready(function() { 
+        // DataTable
+        $('#levels').DataTable({
+            "ordering": false,
+        });
+    });
+    function moveUp(num){
+            if (num > 1){
+                    var temp = document.getElementById("id_name_"+num).value;
+                    document.getElementById("id_name_"+num).value = document.getElementById("id_name_"+(num-1)).value;
+                    document.getElementById("id_name_"+(num-1)).value = temp;
+            }
+    }
+    function moveDown(num){
+        if (num < max){
+                var temp = document.getElementById("id_name_"+num).value;
+                document.getElementById("id_name_"+num).value = document.getElementById("id_name_"+(num+1)).value;
+                document.getElementById("id_name_"+(num+1)).value = temp;
+        }
+}
+    function removeValue(num){
+        next = next - 1;
+        for(var i = num; i<next; i++){
+                document.getElementById("id_name_"+i).value = document.getElementById("id_name_"+(i+1)).value;  
+        }
+        console.log(next);
+        document.getElementById("id_name_"+next).value = null;
+        
+    }
+    function setValue(name){
+            
+        if (next > max){
+                alert("You have tried to add too many projects, please remove one before adding another.");
+        }
+        else{
+                console.log(name)
+                document.getElementById("id_name_"+next).value = name;
+                next = next + 1;
+        }
+    }
+    function showOrHide(i) 
+    {
+        var div = document.getElementById("showorhide"+i);
+        console.log(div.style.display); 
+        if (div.style.display == "none") 
+        {   
+            div.style.display = "block";
+            document.getElementById("arrow"+i).classList.remove('fa-angle-right');
+            document.getElementById("arrow"+i).classList.add('fa-angle-down');
+        }
+        else 
+        {   
+            document.getElementById("arrow"+i).classList.remove('fa-angle-down');
+            document.getElementById("arrow"+i).classList.add('fa-angle-right');
+            div.style.display = "none";
+        }
+    }
+    
+
+    $(window).scroll(function(){
+        var y = $("#list").offset();
+        if ($(this).scrollTop() >= y.top) {
+            $('#form').css('position', 'fixed');
+            $('#form').css('top', '0');
+        } 
+        if ($(this).scrollTop() < y.top){
+            $('#form').css('position', 'absolute');
+            $('#form').css('top', y.top);
+        }
+    }); 
+
+</script>
 {% endblock %}
